--- a/graphql-apollo-server/package.json
+++ b/graphql-apollo-server/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@apollo/datasource-rest": "^6.4.1",
     "@apollo/server": "^4.11.3",
     "graphql": "^16.10.0"
   },
