--- a/graphql-apollo-server/tsconfig.json
+++ b/graphql-apollo-server/tsconfig.json
@@ -7,6 +7,9 @@
     "module": "esnext",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": ["node"]
+    "types": ["node"],
+    "strict": true,
+    "skipLibCheck": true,
+    "noImplicitAny": false
   }
 }
